<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/loginsignup1"
    tools:context=".login">

    <ImageView
        android:contentDescription="@string/main_app_logo"
        android:id="@+id/loginpagealgoverse"
        android:layout_width="300sp"
        android:layout_height="100sp"
        android:layout_marginTop="112dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/algoversetextimage" />

    <TextView
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="16dp"
        android:fontFamily="@font/andika"
        android:gravity="center"
        android:text="@string/login"
        android:textAllCaps="true"
        android:textColor="@color/algo_grey"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/logineditTextTextEmailAddress"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_baseline_email_24"
        android:ems="10"
        android:hint="@string/e_mail_address"
        android:inputType="textEmailAddress"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/algo_yelow"
        app:layout_constraintEnd_toEndOf="@+id/login"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/login"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/logineditTextTextPassword"
        android:layout_width="300sp"
        android:layout_height="48dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/input_background"
        android:drawableStart="@drawable/ic_baseline_security_24"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:paddingStart="20dp"
        android:paddingTop="10dp"
        android:paddingEnd="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="textStart"
        android:textColorHint="@color/algo_yelow"
        app:layout_constraintEnd_toEndOf="@+id/logineditTextTextEmailAddress"
        app:layout_constraintStart_toStartOf="@+id/logineditTextTextEmailAddress"
        app:layout_constraintTop_toBottomOf="@+id/logineditTextTextEmailAddress"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/loginbutton"
        android:layout_width="250sp"
        android:layout_height="48sp"
        android:layout_marginTop="40dp"
        android:text="@string/login"
        android:textSize="20sp"
        android:textColor="#000000"
        android:background="@drawable/login_button_background"
        app:layout_constraintEnd_toEndOf="@+id/logineditTextTextPassword"
        app:layout_constraintHorizontal_bias="0.509"
        app:layout_constraintStart_toStartOf="@+id/logineditTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/logineditTextTextPassword" />

    <TextView
        android:id="@+id/donthaveanaccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/algo_yelow"
        android:textSize="15sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="@+id/loginbutton"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="@+id/loginbutton"
        app:layout_constraintTop_toBottomOf="@+id/loginbutton" />

    <TextView
        android:id="@+id/registerlink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/register_here"
        android:textColor="#FFFFFF"
        android:textSize="15sp"
        android:textStyle="bold|italic"
        app:autoSizeTextType="uniform"
        app:layout_constraintEnd_toEndOf="@+id/donthaveanaccount"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="@+id/donthaveanaccount"
        app:layout_constraintTop_toBottomOf="@+id/donthaveanaccount" />

    <TextView
        android:id="@+id/forgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/forgot_password"
        android:textColor="@color/algo_grey"
        app:layout_constraintEnd_toEndOf="@+id/logineditTextTextPassword"
        app:layout_constraintHorizontal_bias="0.93"
        app:layout_constraintStart_toStartOf="@+id/logineditTextTextPassword"
        app:layout_constraintTop_toBottomOf="@+id/logineditTextTextPassword" />
</androidx.constraintlayout.widget.ConstraintLayout>