<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/algo_grey"
    tools:context=".ProfileFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:elevation="3dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#222123"
            android:elevation="3dp"
            android:minHeight="?android:attr/actionBarSize">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/algoversetextontoolbar"
                    android:layout_width="157dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="-11dp"
                    android:layout_marginTop="6dp"
                    android:layout_toEndOf="@id/toolbarlogo"
                    android:src="@drawable/algoversetextimage"
                    android:contentDescription="@string/toolbarcontent" />

                <ImageView
                    android:contentDescription="@string/toolbarcontent"
                    android:id="@+id/toolbarlogo"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_alignParentStart="true"
                    android:src="@drawable/algo" />


            </RelativeLayout>
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60.1dp"
        android:background="#222123"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/logoutbutton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="552dp"
                android:background="@drawable/login_button_background"
                android:text="@string/logout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/ENDOFPAGE"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="630dp"
                android:text="@string/algoversecopyright"
                android:textColor="#FF6D00"
                android:layout_marginRight="25dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="272dp"
                android:layout_marginTop="0dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingTop="30dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/profile_bg"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/profileImageId"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/pose"
                    android:layout_gravity="center_horizontal"
                    tools:src="@tools:sample/avatars"/>

                <TextView
                    android:id="@+id/profileNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:fontFamily="@font/abril_fatface"
                    android:gravity="center"
                    android:text="NAME"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileEmailTextVew"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/berkshire_swash"
                    android:gravity="center"
                    android:text=" email "
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="italic"
                    tools:ignore="HardcodedText" />


            </LinearLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>